update base image version
remove ENTRYPOINT

--- a/gox/versions/1.7/Dockerfile
+++ b/gox/versions/1.7/Dockerfile
@@ -2,13 +2,15 @@
 #
 # docker run --rm -v $GOPATH/src:/go/src -w /go/src/github.com/your-account/project pottava/gox:1.7 --osarch "linux/amd64" -output "dist/{{.OS}}_{{.Arch}}"
 
-FROM golang:1.7.0-alpine
+FROM golang:1.7-alpine
 
 RUN apk --no-cache add --virtual build-dependencies git \
       && go get -u -v github.com/mitchellh/gox \
-      && go install -v github.com/mitchellh/gox \
       && go get -u -v github.com/ahmetalpbalkan/govvv \
       && rm -rf /go/pkg /go/src
 
-ENTRYPOINT ["/go/bin/gox"]
-CMD ["-h"]
+ENV GOPATH /go
+ENV PATH $GOPATH/bin:/usr/local/go/bin:$PATH
+
+RUN mkdir -p "$GOPATH/src" "$GOPATH/bin" && chmod -R 777 "$GOPATH"
+WORKDIR $GOPATH
